fixed word wrapping and input jumping

--- a/src/components/Calendar/Calendar.module.css
+++ b/src/components/Calendar/Calendar.module.css
@@ -12,6 +12,7 @@
 .calendar td {
     transition: background 0.7s;
     user-select: none;
+    height: 35px;
 }
 
 .calendar td, th {
