--- a/src/components/Events/Counter/Counter.module.css
+++ b/src/components/Events/Counter/Counter.module.css
@@ -2,5 +2,5 @@
     font-weight: bold;
 }
 .counter {
-    max-width: 30%;
+    max-width: 40%;
 }
